--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -27,8 +27,8 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_weight=".3"
                 android:layout_height="wrap_content"
+                android:layout_weight=".3"
                 android:orientation="vertical"
                 android:padding="6dp">
 
@@ -60,12 +60,13 @@
 
                 <ImageView
                     android:id="@+id/admin_profile_pic"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:background="@drawable/circle"
                     android:elevation="3dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/profile_icon" />
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/post_time"
                     android:layout_width="match_parent"
