--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -6,203 +6,134 @@
     android:layout_height="fill_parent"
     android:scrollbars="none"
     tools:context=".view.activities.ClubActivity">
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/white"
         android:src="@drawable/add_icon3"
-        android:layout_margin="16dp" />
+        tools:ignore="ContentDescription" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:contentScrim="@color/main_color"
-        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
-        app:toolbarId="@id/toolbar">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/main_color"
-            tools:context=".EventActivity">
+            android:layout_height="240dp"
+            app:contentScrim="@color/main_color"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@id/toolbar">
 
             <LinearLayout
-                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintHeight_percent="1"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
                 android:orientation="vertical"
-                android:layout_gravity="center"
-                android:background="@color/main_color"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="20dp">
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/profile_pic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.5"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle"
-                    android:scaleType="fitXY"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/profile_icon"
-                    app:layout_constraintDimensionRatio="1:1"
-                    />
+                android:padding="16dp">
 
-                <com.google.android.material.textview.MaterialTextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/club_name"
-                    android:layout_width="fill_parent"
-                    android:layout_weight="0.3"
-                    android:textAlignment="center"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_bold"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
-                    tools:text="CC-Club" />
+                    android:text="@string/action_cancel"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="24sp" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/desc_tv"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/nunito_light"
-                    android:textColor="@color/white"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.2"
-                    android:textSize="12sp"
-                    app:layout_constraintTop_toBottomOf="@id/club_name" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/club_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="@string/action_cancel"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/club_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                app:layout_collapseMode="pin"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/postCardView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardElevation="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/subscribeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:hapticFeedbackEnabled="true"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/nunito_semibold"
                     android:backgroundTint="@color/red"
+                    android:fontFamily="@font/nunito_semibold"
+                    android:hapticFeedbackEnabled="true"
                     android:text="@string/subscribe"
                     android:textColor="@color/white" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/event_timeline_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="Club Posts"
+                    android:textColor="@color/red"
+                    android:textSize="20sp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/clubPostRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/event_timeline_tv"
+                    tools:listitem="@layout/post_list_item" />
             </LinearLayout>
 
-
-            <!--    <TextView-->
-            <!--        android:id="@+id/coordie_tv"-->
-            <!--        android:layout_width="wrap_content"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:layout_marginStart="16dp"-->
-            <!--        android:text="Coordinators :"-->
-            <!--        android:textColor="@color/black"-->
-            <!--        android:textSize="16sp"-->
-            <!--        app:layout_constraintStart_toStartOf="parent"-->
-            <!--        app:layout_constraintTop_toBottomOf="@+id/desc_tv" />-->
-
-            <!--    <androidx.recyclerview.widget.RecyclerView-->
-            <!--        android:id="@+id/coordie_recycler"-->
-            <!--        android:layout_width="match_parent"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:layout_marginHorizontal="16dp"-->
-            <!--        app:layout_constraintStart_toStartOf="parent"-->
-            <!--        app:layout_constraintTop_toBottomOf="@+id/coordie_tv" />-->
-
-            <ProgressBar
-                android:id="@+id/data_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminateTint="@color/black"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <ProgressBar
-                android:id="@+id/subscribeProgress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:hapticFeedbackEnabled="true"
-                android:indeterminate="true"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_collapseMode="pin"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-    </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-
-    <androidx.core.widget.NestedScrollView
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/postCardView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginVertical="10dp"
-        app:cardElevation="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/event_timeline_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Club Posts"
-                android:textSize="20sp"
-                android:fontFamily="@font/nunito_bold"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/red"
-                android:layout_gravity="center_horizontal"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/clubPostRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="2dp"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/event_timeline_tv"
-                tools:listitem="@layout/post_list_item" />
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.core.widget.NestedScrollView>
 
